--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
-name = "local-dns-rust"
+name = "kissdns"
 version = "0.1.0"
 edition = "2024"
+authors = ["Lucian <neuraluc@gmail.com>"]
+description = "A developer-focused DNS server with fallback, caching, and wildcard support."
+readme = "README.md"
+homepage = "https://github.com/gni/kissdns"
+repository = "https://github.com/gni/kissdns"
+documentation = "https://docs.rs/kissdns"
+categories = ["network-programming", "dns"]
+keywords = ["dns", "server", "fallback", "cache", "wildcard", "development"]
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
@@ -9,3 +17,4 @@ serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["full"] }
 log = "0.4.26"
 env_logger = "0.11.7"
+ctrlc = "3.4.5"
